<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTags">

    <Button
        android:id="@+id/button3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:background= "@drawable/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="276dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/round_edit"
        android:ems="10"
        android:hint="@string/et_busq"
        android:inputType="textPersonName"
        android:padding="10sp"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_suggested"
        android:textColor="#2E2C2C"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="320dp"
        android:layout_height="162dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#aa00ff"
            android:drawableEnd="@drawable/info"
            android:drawableRight="@drawable/info"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rbtn_1"
            android:textColor="#2E2C2C"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#aa00ff"
            android:drawableEnd="@drawable/info"
            android:drawableRight="@drawable/info"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rbtn_2"
            android:textColor="#2E2C2C"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#aa00ff"
            android:drawableEnd="@drawable/info"
            android:drawableRight="@drawable/info"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rbtn_3"
            android:textColor="#2E2C2C"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#aa00ff"
            android:drawableEnd="@drawable/info"
            android:drawableRight="@drawable/info"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rbtn_4"
            android:textColor="#2E2C2C"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#aa00ff"
            android:drawableEnd="@drawable/info"
            android:drawableRight="@drawable/info"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rbtn_5"
            android:textColor="#2E2C2C"
            android:textSize="18sp"
            tools:targetApi="lollipop" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_all"
        android:textSize="18sp"
        android:textColor="#2E2C2C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/round_button"
        android:text="@string/btn_done"
        android:onClick="ShowAlert"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>